--- a/teams.html
+++ b/teams.html
@@ -2,53 +2,40 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Nos Teams</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <section class="hero">
+    <h1>Nos Teams</h1>
+    <p>Découvrez les différentes équipes de JVJ</p>
+</section>
 
-<section class="teams">
-    <h2 class="section-title">Nos Teams</h2>
+<section class="section">
+    <div class="cards">
 
-    <div class="team-container">
-
-        <div class="team-card">
+        <div class="card">
             <h3>Team Worship</h3>
-            <p>Responsable de la louange et de l'adoration.</p>
-            <a href="teams/worship.html" class="team-btn">Voir plus</a>
+            <p>Responsable de la louange et de l’adoration.</p>
+            <a href="teams/worship.html" class="btn">Voir plus</a>
         </div>
 
-        <div class="team-card">
+        <div class="card">
             <h3>Team Media & Communication</h3>
             <p>Gestion des réseaux et communication digitale.</p>
-            <a href="teams/media.html" class="team-btn">Voir plus</a>
+            <a href="teams/media.html" class="btn">Voir plus</a>
         </div>
 
-        <div class="team-card">
+        <div class="card">
             <h3>Team Intercession</h3>
             <p>Prière et soutien spirituel du groupe.</p>
-            <a href="teams/intercession.html" class="team-btn">Voir plus</a>
+            <a href="teams/intercession.html" class="btn">Voir plus</a>
         </div>
 
     </div>
 </section>
 
-<footer class="footer">
-    <div class="footer-content">
-        <h3>JVJ</h3>
-        <p>Jeunesse Vivante en Jésus</p>
-
-        <div class="footer-links">
-            <a href="index.html">Accueil</a>
-            <a href="teams.html">Teams</a>
-            <a href="about.html">À propos</a>
-        </div>
-
-        <p class="copyright">
-            © 2026 JVJ - Tous droits réservés
-        </p>
-    </div>
-</footer>
-
+<script src="java/teams.js"></script>
 </body>
 </html>
