--- a/teams/media.html
+++ b/teams/media.html
@@ -2,56 +2,75 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Team Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Media & Communication</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 
-<section class="team-hero">
-    <h1 class="team-title">Team Média et Communication</h1>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Team Media & Communication</h1>
+        <p>Gestion des réseaux et communication digitale.</p>
+    </section>
 
-<section class="team-content">
-
-    <div class="team-description">
+    <!-- À PROPOS -->
+    <section class="section">
         <h2>À propos</h2>
-        <p>Description complète de la team.</p>
-    </div>
 
-    <div class="team-events">
+        <div class="cards">
+            <div class="card">
+                <p>
+                    La Team Media & Communication est responsable de la gestion 
+                    des réseaux sociaux, de la création graphique, 
+                    de la captation vidéo et de la communication digitale de JVJ.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- PROGRAMME -->
+    <section class="section">
         <h2>Programme & Activités</h2>
 
-        <div class="event-card">
-            <h3>Répétition Hebdomadaire</h3>
-            <p>Chaque Vendredi à 18h00</p>
+        <div class="cards">
+
+            <div class="card">
+                <h3>Création de contenu</h3>
+                <p>Affiches, vidéos, publications réseaux sociaux</p>
+                <a href="#" class="btn">Voir projets</a>
+                <a href="https://wa.me/+23672843913" class="btn-whatsapp" target="_blank">
+    Rejoindre via WhatsApp
+</a>
+            </div>
+
+            <div class="card">
+                <h3>Couverture Événements</h3>
+                <p>Photos & vidéos des événements JVJ</p>
+                <a href="#" class="btn">En savoir plus</a>
+            </div>
+
         </div>
+    </section>
 
-        <div class="event-card">
-            <h3>Réunion de préparation</h3>
-            <p>Chaque Mardi à 20h00 (Google Meet)</p>
-        </div>
-    </div>
-
-    <div class="team-contact">
-        <a href="https://wa.me/XXXXXXXXXX" class="whatsapp-btn">
-            Rejoindre via WhatsApp
-        </a>
-    </div>
-
-</section>
-<footer class="footer">
-    <div class="footer-content">
+    <!-- FOOTER -->
+    <footer>
         <h3>JVJ</h3>
         <p>Jeunesse Vivante en Jésus</p>
 
-        <div class="footer-links">
-            <a href="../index.html">Accueil</a>
-            <a href="../teams.html">Teams</a>
+        <p>
+            <a href="../index.html">Accueil</a> |
+            <a href="../teams.html">Teams</a> |
             <a href="../about.html">À propos</a>
-        </div>
-
-        <p class="copyright">
-            © 2026 JVJ - Tous droits réservés
         </p>
-    </div>
-</footer>  
+        
+        <div class="footer-logo">
+            <img src="../image/logo-jvj.jpg" alt="JVJ Logo">
+        </div>
+        <p>© 2026 JVJ - Tous droits réservés</p>
+      
+    </footer>
+
+</body>
+</html>
