--- a/teams/worship.html
+++ b/teams/worship.html
@@ -2,56 +2,80 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Team Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Worship</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
 
-<section class="team-hero">
-    <h1 class="team-title">Team Worship</h1>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Team Worship</h1>
+        <p>Responsable de la louange et de l’adoration.</p>
+    </section>
 
-<section class="team-content">
-
-    <div class="team-description">
+    <!-- À PROPOS -->
+    <section class="section">
         <h2>À propos</h2>
-        <p>Description complète de la team.</p>
-    </div>
 
-    <div class="team-events">
+        <div class="cards">
+            <div class="card">
+                <p>
+                    La Team Worship conduit les moments de louange 
+                    et crée une atmosphère propice à la présence de Dieu 
+                    lors des rassemblements JVJ.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- PROGRAMME -->
+    <section class="section">
         <h2>Programme & Activités</h2>
 
-        <div class="event-card">
-            <h3>Répétition Hebdomadaire</h3>
-            <p>Chaque Vendredi à 18h00</p>
+        <div class="cards">
+
+            <div class="card">
+                <h3>Répétition Hebdomadaire</h3>
+                <p>Chaque mercredi - 18h</p>
+                <a href="https://wa.me/212600000000?text=Bonjour%20je%20veux%20participer%20à%20la%20Team%20Worship%20JVJ"
+                   target="_blank"
+                   class="btn">
+                   Participer
+                </a>
+            </div>
+
+            <div class="card">
+                <h3>Service du dimanche</h3>
+                <p>Animation de la louange</p>
+                <a href="https://wa.me/212600000000?text=Bonjour%20je%20veux%20plus%20d'informations%20sur%20la%20Team%20Worship%20JVJ"
+                   target="_blank"
+                   class="btn">
+                   En savoir plus
+                </a>
+            </div>
+
         </div>
+    </section>
 
-        <div class="event-card">
-            <h3>Réunion de préparation</h3>
-            <p>Chaque Mardi à 20h00 (Google Meet)</p>
-        </div>
-    </div>
-
-    <div class="team-contact">
-        <a href="https://wa.me/XXXXXXXXXX" class="whatsapp-btn">
-            Rejoindre via WhatsApp
-        </a>
-    </div>
-
-</section>
-<footer class="footer">
-    <div class="footer-content">
+    <!-- FOOTER -->
+    <footer>
         <h3>JVJ</h3>
         <p>Jeunesse Vivante en Jésus</p>
 
-        <div class="footer-links">
-            <a href="../index.html">Accueil</a>
-            <a href="../teams.html">Teams</a>
+        <p>
+            <a href="../index.html">Accueil</a> |
+            <a href="../teams.html">Teams</a> |
             <a href="../about.html">À propos</a>
+        </p>
+
+        <div class="footer-logo">
+            <img src="../image/logo-jvj.jpg" alt="JVJ Logo">
         </div>
 
-        <p class="copyright">
-            © 2026 JVJ - Tous droits réservés
-        </p>
-    </div>
-</footer>
+        <p>© 2026 JVJ - Tous droits réservés</p>
+    </footer>
+
+</body>
+</html>
