--- a/teams/intercession.html
+++ b/teams/intercession.html
@@ -2,56 +2,69 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Team Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Team Intercession</title>
     <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
-<section class="team-hero">
-    <h1 class="team-title">Team Intercession</h1>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h1>Team Intercession</h1>
+        <p>Une équipe dédiée à la prière et au soutien spirituel.</p>
+    </section>
 
-<section class="team-content">
-
-    <div class="team-description">
+    <!-- À PROPOS -->
+    <section class="section">
         <h2>À propos</h2>
-        <p>Description complète de la team.</p>
-    </div>
 
-    <div class="team-events">
+        <div class="cards">
+            <div class="card">
+                <p>
+                    La Team Intercession est dédiée à la prière, au soutien spirituel 
+                    et à l’intercession pour les projets et les membres de JVJ.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- PROGRAMME -->
+    <section class="section">
         <h2>Programme & Activités</h2>
 
-        <div class="event-card">
-            <h3>Répétition Hebdomadaire</h3>
-            <p>Chaque Vendredi à 18h00</p>
+        <div class="cards">
+            <div class="card">
+                <h3>Prière hebdomadaire</h3>
+                <p>Chaque vendredi - 19h</p>
+<a href="https://wa.me/+23672843913" class="btn-whatsapp" target="_blank">
+    Rejoindre via WhatsApp
+</a>
+
+            </div>
         </div>
+    </section>
 
-        <div class="event-card">
-            <h3>Réunion de préparation</h3>
-            <p>Chaque Mardi à 20h00 (Google Meet)</p>
-        </div>
-    </div>
-
-    <div class="team-contact">
-        <a href="https://wa.me/XXXXXXXXXX" class="whatsapp-btn">
-            Rejoindre via WhatsApp
-        </a>
-    </div>
-
-</section>
-<footer class="footer">
-    <div class="footer-content">
+    <!-- FOOTER -->
+    <footer>
         <h3>JVJ</h3>
         <p>Jeunesse Vivante en Jésus</p>
 
-        <div class="footer-links">
-            <a href="../index.html">Accueil</a>
-            <a href="../teams.html">Teams</a>
+        <p>
+            <a href="../index.html">Accueil</a> |
+            <a href="../teams.html">Teams</a> |
             <a href="../about.html">À propos</a>
+        </p>
+
+        <div class="footer-logo">
+            <img src="../image/logo-jvj.jpg" alt="JVJ Logo">
         </div>
 
-        <p class="copyright">
-            © 2026 JVJ - Tous droits réservés
-        </p>
-    </div>
-</footer>
+        <p>© 2026 JVJ - Tous droits réservés</p>
+    </footer>
+
+</body>
+</html>
