deuxieme commit JVJ site

--- a/index.html
+++ b/index.html
@@ -38,15 +38,14 @@
                 "JVJ a transformé ma vie spirituelle. J’ai grandi dans ma foi
                 et trouvé une vraie famille en Christ."
             </p>
-            <h4>- Sarah M.</h4>
+            <h4>- Judio</h4>
         </div>
 
         <div class="card">
             <p>
-                "Grâce aux activités et aux équipes, j’ai découvert
-                mon appel et mon potentiel."
+                "JVJ est bien plus qu'une famille en christ"."
             </p>
-            <h4>- David K.</h4>
+            <h4>- Olivia.</h4>
         </div>
 
         <div class="card">
@@ -54,7 +53,7 @@
                 "Un mouvement puissant pour la jeunesse.
                 Je recommande à tous les jeunes !"
             </p>
-            <h4>- Esther L.</h4>
+            <h4>- Sthephane.</h4>
         </div>
 
     </div>
