Premier commit JVJ site

--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 
     <nav>
         <a href="index.html">Accueil</a>
-        <a href="teams.html">Teams</a>
         <a href="about.html">À propos</a>
         <a href="contact.html" class="btn">Nous rejoindre</a>
     </nav>
 </header>
 
-<section class="hero">
+<section class="hero" style="background-image: url('image/image.png');">
     <h1>Jesus Veut Notre Jeunesse</h1>
     <p>Un mouvement pour impacter la jeunesse pour Christ</p>
-    <a href="teams.html" class="btn">Découvrir nos Teams</a>
+    <a href="about.html" class="btn">Découvrir JVJ</a>
 </section>
 <section class="section reveal">
     <h2>Témoignages</h2>
@@ -91,7 +90,6 @@ window.addEventListener("scroll", revealOnScroll);
 
     <p>
         <a href="index.html">Accueil</a> |
-        <a href="teams.html">Teams</a> |
         <a href="about.html">À propos</a> |
         <a href="contact.html">Contact</a>
     </p>
